[B]Retrospect v4.1.8.4 - Changelog - 2019-03-02[/B]

!! Due to the changing of the add-on ID, there is an extra add-on data migration step required. This happens as soon as you install the new version. !!

[B]Framework related[/B]
* Fixed: On download error for subtitle, don't continue
* Fixed: subtitle setting was ignore if InputStream Adaptive add-on was use for streams (See #1114)

[B]GUI/Settings/Language related[/B]
-

[B]Channel related[/B]
* Fixed: Abort NPO stream checking if no URL is found (See #1114)
* Fixed: NPO now uses Widevine streams only. Older items are no longer available without a paid account (Fixes #1114)
* Fixed: Kijk.nl more DRM protected streams did not work (Fixes #1116)
* Fixed: 24 Classic moved to https which broke the channel (Fixes #1111)